# GraphicApplication

./: CMakeLists.txt  Doxyfile  LICENCE.md  README.md
libs/SDL2_net/: CMakeLists.txt  SDL_net.h
src/: main.cpp
src/Render/: Mesh.cpp  Mesh.h  MeshGroup.cpp  MeshGroup.h  Shader.h
src/System/: MouseProperties.h  SystemManager.cpp  SystemManager.h  window.cpp  window.h
src/imgui/: fontstash.cpp  imgui.cpp  imgui.h  imguiRenderGL3.cpp  imguiRenderGL3.h
